--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,11 +23,11 @@ status-website:
   introTitle: "The Discord music bot that's 100% free with no payment or votes required to access all its amazing functionalities."
   introMessage: See which of my websites are up, which are down, and which are broken here!
   navbar:
-    - title: Uptime
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER
-    - title: Community
+    - title: Invite bot
+      href: https://is-a.fun/mybot
+    - title: Official Website
+      href: https://meww.me
+    - title: Server Support
       href: https://discord.gg/6EXgrmtkPX
       
 theme: dark
