--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,9 +8,9 @@ sites:
   - name: Mewwme's
     url: http://34.142.204.199:65535
   - name: Mewwme's [1]
-    url: http://168.119.88.145:3004/
+    url: http://168.119.88.145:3004
   - name: Mewwme's [2]
-    url: http://168.119.88.145:3009/
+    url: http://168.119.88.145:3009
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
