--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,6 +15,8 @@ sites:
     url: http://168.119.88.145:3009
   - name: Mewwme's [3]
     url: http://168.119.88.145:3011
+  - name: Mewwme's [4]
+    url: http://168.119.88.145:3012
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
