--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,15 +8,13 @@ sites:
   - name: Mewwme Docs
     url: https://docs.meww.me
   - name: Mewwme's
-    url: http://34.142.204.199:3022
+    url: http://panel.meww.me:3000
   - name: Mewwme's [1]
-    url: http://168.119.88.145:3004
+    url: http://borneo.alfari.id:39008
   - name: Mewwme's [2]
-    url: http://168.119.88.145:3009
+    url: http://panel.meww.me:3004
   - name: Mewwme's [3]
-    url: http://168.119.88.145:3011
-  - name: Mewwme's [4]
-    url: http://168.119.88.145:3012
+    url: http://panel.meww.me:3005
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
