--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,12 +3,12 @@ owner: mewwme # Your GitHub organization or username, where this repository live
 repo: upptime # The name of this repository
 
 sites:
-  - name: Mewwme Website
-    url: https://meww.me
-  - name: Mewwme Docs
-    url: https://docs.meww.me
-  - name: Mewwme Dashboard
-    url: https://api.meww.me
+  - name: Website
+    url: https://mewwme.vercel.app/
+  - name: Docs
+    url: https://docs-mewwme.vercel.app/
+  - name: Webserver
+    url: http://45.137.70.68:8016
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
